--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,54 @@
     box-sizing: border-box;
 }
 
+/* common  */
+
 .clearfix::after {
     display: table;
     content: '';
     clear: both;
 }
 
+/* header  */
+
+header {
+    width: 30vw;
+    margin: 20px auto 0px;
+    padding: 10px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+header h1 {
+    margin-bottom: 10px;
+}
+header button {
+    width: 40px;
+}
+
+header button img {
+    width: 100%;
+}
+
+header #reset {
+    margin-top: 10px;
+}
+
+/* main  */
+main .wrapper {
+    width: 30vw;
+    margin: 0 auto;
+}
+
 .container {
-    width: 40vw;
-    height: 40vw;
     background-color: lightgrey;
-    margin: 50px auto;
 }
 
 .square {
     float: left;
-    width: calc(40vw / 10);
-    height: calc(40vw / 10);
+    width: calc(30vw / 10);
+    height: calc(30vw / 10);
     border: 1px solid black;
 }
 
@@ -30,8 +61,12 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
-.red {
-    background-color: red;
+main .score-box {
+    text-align: center;
+    padding: 10px;
+    font-size: 30px;
 }
