--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
 
 /* common  */
 
+body {
+    background-color: lightgray;
+}
+
 .clearfix::after {
     display: table;
     content: '';
@@ -19,8 +23,11 @@ header {
     margin: 20px auto 0px;
     padding: 10px;
     text-align: center;
-    border: 1px solid black;
-    border-radius: 10px;
+    background: linear-gradient(gray, white, gray);
+    border-top: 5px solid gray;
+    border-left: 5px solid gray;
+    border-right: 5px solid darkgray;
+    border-bottom: 5px solid darkgray;
 }
 
 header h1 {
@@ -42,16 +49,23 @@ header #reset {
 main .wrapper {
     width: 30vw;
     margin: 0 auto;
+    background-color: lightgrey;
+    padding-top: 10px;
+    
 }
 
 .container {
-    background-color: lightgrey;
+    background: linear-gradient(white, lightgray);
+    border-top: 10px solid gray;
+    border-left: 10px solid gray;
+    border-right: 10px solid darkgray;
+    border-bottom: 10px solid darkgray;
 }
 
 .square {
     float: left;
-    width: calc(30vw / 10);
-    height: calc(30vw / 10);
+    width: calc((30vw / 10) - 2px);
+    height: calc((30vw / 10) - 2px);
     border: 1px solid black;
 }
 
@@ -65,8 +79,14 @@ main .wrapper {
     background-position: center;
 }
 
+.cell:hover {
+    background-color: cornflowerblue;
+}
+
 main .score-box {
     text-align: center;
+    margin-top: 10px;
     padding: 10px;
     font-size: 30px;
+    border: 5px solid gray;
 }
