--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ main .wrapper {
     float: left;
     width: calc((30vw / 10) - 2px);
     height: calc((30vw / 10) - 2px);
-    border: 1px solid black;
+    border: 1px solid gray;
 }
 
 .cell {
@@ -88,5 +88,8 @@ main .score-box {
     margin-top: 10px;
     padding: 10px;
     font-size: 30px;
-    border: 5px solid gray;
+    border-top: 5px solid gray;
+    border-left: 5px solid gray;
+    border-right: 5px solid darkgray;
+    border-bottom: 5px solid darkgray;
 }
