--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ main .wrapper {
     float: left;
     width: calc((30vw / 10) - 2px);
     height: calc((30vw / 10) - 2px);
-    border: 1px solid gray;
 }
 
 .cell {
@@ -77,6 +76,15 @@ main .wrapper {
     height: 100%;
     background-size: cover;
     background-position: center;
+    border: 1px solid gray;
+}
+
+.clicked-cell {
+    background-color: darkgray;
+    border-top: 2px solid gray;
+    border-left: 2px solid gray;
+    border-right: 2px solid lightgray;
+    border-bottom: 2px solid lightgray;
 }
 
 .cell:hover {
